libqt6c/src/libqtimer.hpp

#pragma once
#ifndef SRCC_LIBQTIMER_HPP
#define SRCC_LIBQTIMER_HPP

#include <stdbool.h>
#include <stddef.h>

#pragma GCC diagnostic ignored "-Wdeprecated-declarations"

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#else
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTimer QTimer;
typedef struct QTimerEvent QTimerEvent;
#endif

QTimer* QTimer_new();
QTimer* QTimer_new2(QObject* parent);
QMetaObject* QTimer_MetaObject(const QTimer* self);
void* QTimer_Metacast(QTimer* self, const char* param1);
int QTimer_Metacall(QTimer* self, int param1, int param2, void** param3);
bool QTimer_IsActive(const QTimer* self);
int QTimer_TimerId(const QTimer* self);
void QTimer_SetInterval(QTimer* self, int msec);
int QTimer_Interval(const QTimer* self);
int QTimer_RemainingTime(const QTimer* self);
void QTimer_SetTimerType(QTimer* self, int atype);
int QTimer_TimerType(const QTimer* self);
void QTimer_SetSingleShot(QTimer* self, bool singleShot);
bool QTimer_IsSingleShot(const QTimer* self);
void QTimer_SingleShot(int msec, const QObject* receiver, const char* member);
void QTimer_SingleShot2(int msec, int timerType, const QObject* receiver, const char* member);
void QTimer_Start(QTimer* self, int msec);
void QTimer_Start2(QTimer* self);
void QTimer_Stop(QTimer* self);
void QTimer_SetInterval2(QTimer* self, int64_t value);
int64_t QTimer_IntervalAsDuration(const QTimer* self);
int64_t QTimer_RemainingTimeAsDuration(const QTimer* self);
void QTimer_SingleShot3(int64_t value, const QObject* receiver, const char* member);
void QTimer_SingleShot4(int64_t value, int timerType, const QObject* receiver, const char* member);
void QTimer_Start3(QTimer* self, int64_t value);
void QTimer_TimerEvent(QTimer* self, QTimerEvent* param1);
void QTimer_OnMetaObject(const QTimer* self, intptr_t slot);
QMetaObject* QTimer_SuperMetaObject(const QTimer* self);
void QTimer_OnMetacast(QTimer* self, intptr_t slot);
void* QTimer_SuperMetacast(QTimer* self, const char* param1);
void QTimer_OnMetacall(QTimer* self, intptr_t slot);
int QTimer_SuperMetacall(QTimer* self, int param1, int param2, void** param3);
void QTimer_OnTimerEvent(QTimer* self, intptr_t slot);
void QTimer_SuperTimerEvent(QTimer* self, QTimerEvent* param1);
bool QTimer_Event(QTimer* self, QEvent* event);
void QTimer_OnEvent(QTimer* self, intptr_t slot);
bool QTimer_SuperEvent(QTimer* self, QEvent* event);
bool QTimer_EventFilter(QTimer* self, QObject* watched, QEvent* event);
void QTimer_OnEventFilter(QTimer* self, intptr_t slot);
bool QTimer_SuperEventFilter(QTimer* self, QObject* watched, QEvent* event);
void QTimer_ChildEvent(QTimer* self, QChildEvent* event);
void QTimer_OnChildEvent(QTimer* self, intptr_t slot);
void QTimer_SuperChildEvent(QTimer* self, QChildEvent* event);
void QTimer_CustomEvent(QTimer* self, QEvent* event);
void QTimer_OnCustomEvent(QTimer* self, intptr_t slot);
void QTimer_SuperCustomEvent(QTimer* self, QEvent* event);
void QTimer_ConnectNotify(QTimer* self, const QMetaMethod* signal);
void QTimer_OnConnectNotify(QTimer* self, intptr_t slot);
void QTimer_SuperConnectNotify(QTimer* self, const QMetaMethod* signal);
void QTimer_DisconnectNotify(QTimer* self, const QMetaMethod* signal);
void QTimer_OnDisconnectNotify(QTimer* self, intptr_t slot);
void QTimer_SuperDisconnectNotify(QTimer* self, const QMetaMethod* signal);
QObject* QTimer_Sender(const QTimer* self);
void QTimer_OnSender(const QTimer* self, intptr_t slot);
QObject* QTimer_SuperSender(const QTimer* self);
int QTimer_SenderSignalIndex(const QTimer* self);
void QTimer_OnSenderSignalIndex(const QTimer* self, intptr_t slot);
int QTimer_SuperSenderSignalIndex(const QTimer* self);
int QTimer_Receivers(const QTimer* self, const char* signal);
void QTimer_OnReceivers(const QTimer* self, intptr_t slot);
int QTimer_SuperReceivers(const QTimer* self, const char* signal);
bool QTimer_IsSignalConnected(const QTimer* self, const QMetaMethod* signal);
void QTimer_OnIsSignalConnected(const QTimer* self, intptr_t slot);
bool QTimer_SuperIsSignalConnected(const QTimer* self, const QMetaMethod* signal);
void QTimer_Connect_Timeout(QTimer* self, intptr_t slot);
void QTimer_Delete(QTimer* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif